// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders empty table 1`] = `
<div
  class="fishd-table-wrapper"
>
  <div
    class="fishd-spin-nested-loading"
  >
    <div
      class="fishd-spin-nested"
    >
      <div>
        <div
          class="fishd-table fishd-table-default fishd-table-empty fishd-table-scroll-position-left"
        >
          <div
            class="fishd-table-content"
          >
            <div
              class="fishd-table-body"
            >
              <table
                class=""
              >
                <colgroup>
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                </colgroup>
                <thead
                  class="fishd-table-thead"
                >
                  <tr>
                    <th
                      class=""
                    >
                      <span>
                        Column 1
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 2
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 3
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 4
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 5
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 6
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 7
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 8
                      </span>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="fishd-table-tbody"
                />
              </table>
            </div>
            <div
              class="fishd-table-placeholder"
            >
              暂无数据
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table with custom emptyText 1`] = `
<div
  class="fishd-table-wrapper"
>
  <div
    class="fishd-spin-nested-loading"
  >
    <div
      class="fishd-spin-nested"
    >
      <div>
        <div
          class="fishd-table fishd-table-default fishd-table-empty fishd-table-scroll-position-left"
        >
          <div
            class="fishd-table-content"
          >
            <div
              class="fishd-table-body"
            >
              <table
                class=""
              >
                <colgroup>
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                </colgroup>
                <thead
                  class="fishd-table-thead"
                >
                  <tr>
                    <th
                      class=""
                    >
                      <span>
                        Column 1
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 2
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 3
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 4
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 5
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 6
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 7
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 8
                      </span>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="fishd-table-tbody"
                />
              </table>
            </div>
            <div
              class="fishd-table-placeholder"
            >
              custom empty text 
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table with fixed columns 1`] = `
<div
  class="fishd-table-wrapper"
>
  <div
    class="fishd-spin-nested-loading"
  >
    <div
      class="fishd-spin-nested"
    >
      <div>
        <div
          class="fishd-table fishd-table-default fishd-table-empty fishd-table-scroll-position-left"
        >
          <div
            class="fishd-table-content"
          >
            <div
              class="fishd-table-scroll"
            >
              <div
                class="fishd-table-body"
              >
                <table
                  class=""
                >
                  <colgroup>
                    <col
                      style="width:100px;min-width:100px"
                    />
                    <col
                      style="width:100px;min-width:100px"
                    />
                    <col />
                    <col />
                    <col />
                    <col />
                    <col />
                    <col />
                    <col />
                    <col />
                    <col
                      style="width:100px;min-width:100px"
                    />
                  </colgroup>
                  <thead
                    class="fishd-table-thead"
                  >
                    <tr>
                      <th
                        class="fishd-table-fixed-columns-in-body"
                      >
                        <span>
                          Full Name
                        </span>
                      </th>
                      <th
                        class="fishd-table-fixed-columns-in-body"
                      >
                        <span>
                          Age
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span>
                          Column 1
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span>
                          Column 2
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span>
                          Column 3
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span>
                          Column 4
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span>
                          Column 5
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span>
                          Column 6
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span>
                          Column 7
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span>
                          Column 8
                        </span>
                      </th>
                      <th
                        class="fishd-table-fixed-columns-in-body"
                      >
                        <span>
                          Action
                        </span>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="fishd-table-tbody"
                  />
                </table>
              </div>
              <div
                class="fishd-table-placeholder"
              >
                暂无数据
              </div>
            </div>
            <div
              class="fishd-table-fixed-left"
            >
              <div
                class="fishd-table-body-outer"
                style="-webkit-transform:translate3d (0, 0, 0)"
              >
                <div
                  class="fishd-table-body-inner"
                >
                  <table
                    class="fishd-table-fixed"
                  >
                    <colgroup>
                      <col
                        style="width:100px;min-width:100px"
                      />
                      <col
                        style="width:100px;min-width:100px"
                      />
                    </colgroup>
                    <thead
                      class="fishd-table-thead"
                    >
                      <tr>
                        <th
                          class=""
                        >
                          <span>
                            Full Name
                          </span>
                        </th>
                        <th
                          class=""
                        >
                          <span>
                            Age
                          </span>
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="fishd-table-tbody"
                    />
                  </table>
                </div>
              </div>
            </div>
            <div
              class="fishd-table-fixed-right"
            >
              <div
                class="fishd-table-body-outer"
                style="-webkit-transform:translate3d (0, 0, 0)"
              >
                <div
                  class="fishd-table-body-inner"
                >
                  <table
                    class="fishd-table-fixed"
                  >
                    <colgroup>
                      <col
                        style="width:100px;min-width:100px"
                      />
                    </colgroup>
                    <thead
                      class="fishd-table-thead"
                    >
                      <tr>
                        <th
                          class=""
                        >
                          <span>
                            Action
                          </span>
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="fishd-table-tbody"
                    />
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table without emptyText when loading 1`] = `
<div
  class="fishd-table-wrapper"
>
  <div
    class="fishd-spin-nested-loading"
  >
    <div>
      <div
        class="fishd-spin fishd-spin-spinning fishd-table-without-pagination fishd-table-spin-holder"
      >
        <span
          class="fishd-spin-dot fishd-spin-dot-spin"
        >
          <i />
          <i />
          <i />
          <i />
        </span>
      </div>
    </div>
    <div
      class="fishd-spin-nested fishd-spin-blur"
    >
      <div>
        <div
          class="fishd-table fishd-table-default fishd-table-empty fishd-table-scroll-position-left"
        >
          <div
            class="fishd-table-content"
          >
            <div
              class="fishd-table-body"
            >
              <table
                class=""
              >
                <colgroup>
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                </colgroup>
                <thead
                  class="fishd-table-thead"
                >
                  <tr>
                    <th
                      class=""
                    >
                      <span>
                        Column 1
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 2
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 3
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 4
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 5
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 6
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 7
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span>
                        Column 8
                      </span>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="fishd-table-tbody"
                />
              </table>
            </div>
            <div
              class="fishd-table-placeholder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
